# graph-dp

./: .gitignore  .gitmodules  .sanity_check.py.swo  .sanity_check.py.swp  LICENSE  README.md  benchmark.py  dblp_0_index_distributed_log.txt  dblp_0_index_phi05_n17.txt  dblp_cores  dblp_greedy  graph_partitioner.py  log.txt  run.sh  sanity_check.py  setup-hpc.sh
extra_logs/: dblp_0_index  dblp_0_index_distributed_log_phi0.2.txt  dblp_0_index_distributed_log_phi05.txt  dblp_0_index_phi05_n17.txt  dblp_greedy  dblp_greedy_eta09_epsilon05_phi05_n17.txt  dblp_greedy_eta09_epsilon0_phi05_n17.txt  log.txt  zhang_dblp_eta09_epsilon0.5_phi05_n17_rounds_lpg_thresholding_2.txt
ground_truth/: zhang_dblp_cores
src/: CMakeLists.txt  CmakeLists.txt  Graph.h  KCore.cpp  KCore.h  LDS.h  LDS_approx.h  distributed_graph_algorithm.cpp  distributions.h  status.h  status_macros.h
